# MaiMBot

./: .gitignore  MaiLauncher.bat  README.md  memory_system_summary.md  monitor.py  pyproject.toml  requirements.txt  run.bat  run.py
.cunzhi-memory/: context.md  metadata.json  rules.md
.github/workflows/: ruff-format.yml
.kiro/steering/: product.md  structure.md  tech.md
db/: maimbot.db
memory-bank/: activeContext.md  config_analysis.md  decisionLog.md  progress.md  project_overview.md
scripts/: import_openie.py  info_extraction.py  interest_value_analysis.py  log_viewer_optimized.py  lpmm_interactive_manager.py  lpmm_manager.py  refresh_lpmm_knowledge.py  test_lpmm_retrieval.py
src/: main.py
src/chat/brain_chat/: brain_chat.py  brain_planner.py
src/chat/chat_loop/: heartFC_chat.py
src/chat/emoji_system/: emoji_manager.py
src/chat/express/: expression_learner.py  expression_selector.py
src/chat/focus_chat/: heartFC_chat.py  heartflow_message_processor.py  heartflow_message_revceiver.py  heartflow_processor.py  heartflow_prompt_builder.py  hfc_utils.py
src/chat/heart_flow/: mai_state_manager.py
src/chat/knowledge/: __init__.py  embedding_store.py  ie_process.py  kg_manager.py  knowledge_lib.py  lpmm_ops.py  qa_manager.py
src/chat/mai_thinking/: mai_think.py
src/chat/memory_system/: Hippocampus.py
src/chat/message_receive/: bot.py  chat_stream.py  message.py  message_sender.py
src/chat/models/: utils_model.py
src/chat/normal_chat/: normal_chat.py  normal_prompt.py
src/chat/planner_actions/: action_modifier.py  planner.py
src/chat/replyer/: default_generator.py  group_generator.py  private_generator.py
src/chat/utils/: chat_message_builder.py  statistic.py  utils.py  utils_image.py  utils_voice.py
src/chat/willing/: mode_classical.py  mode_mxp.py  willing_manager.py
src/common/: database.py  database_sqlite.py  logger.py
src/config/: config.py  official_configs.py
src/do_tool/: tool_use.py
src/do_tool/tool_can_use/: eval_tool.py  tavily.py  tavily_tool.py
src/experimental/: only_message_process.py
src/gui/: reasoning_gui.py
src/heart_flow/: heartflow.py  observation.py  sub_heartflow.py
src/individuality/: identity.py  individuality.py  personality.py
src/llm_models/: utils_model.py
src/mais4u/: mai_think.py  s4u_config.py
src/mais4u/mais4u_chat/: body_emotion_action_manager.py  gift_manager.py  loading.py  s4u_chat.py  s4u_mood_manager.py  s4u_msg_processor.py  s4u_prompt.py  s4u_stream_generator.py  s4u_watching_manager.py  screen_manager.py  super_chat_manager.py  yes_or_no.py
src/memory_system/: chat_history_summarizer.py  memory_retrieval.py
src/memory_system/retrieval_tools/: __init__.py  query_lpmm_knowledge.py
src/mood/: mood_manager.py
src/person_info/: person_info.py  relationship_builder.py  relationship_fetcher.py  relationship_manager.py
src/plugin_system/apis/: __init__.py  component_manage_api.py  message_api.py  plugin_manage_api.py  plugin_register_api.py
src/plugin_system/base/: base_action.py  base_event_plugin.py
src/plugin_system/core/: component_registry.py  events_manager.py  plugin_manager.py
src/plugin_system/utils/: manifest_utils.py
src/plugins/PFC/: action_planner.py  conversation.py  message_storage.py  observation_info.py  pfc.py
src/plugins/chat/: bot.py  utils.py  (+7 more)
src/think_flow_demo/: current_mind.py  heartflow.py  personality_info.txt  sub_heartflow.py
src/webui/: webui_server.py
template/: bot_config_template.toml
(+33 files in other folders)
