[project]
name = "MaiMaiBot"
version = "0.1.0"
description = "MaiMaiBot"
dependencies = [
    "aiohttp>=3.11.14",
    "apscheduler>=3.11.0",
    "colorama>=0.4.6",
    "customtkinter>=5.2.2",
    "dotenv>=0.9.9",
    "gradio>=5.22.0",
    "jieba>=0.42.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "nb-cli>=1.4.2",
    "networkx>=3.4.2",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot2[fastapi]>=2.4.2",
    "numpy>=2.2.4",
    "openai>=1.68.2",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pydantic>=2.10.6",
    "pymongo>=4.11.3",
    "pypinyin>=0.53.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ruff>=0.11.2",
    "scipy>=1.15.2",
    "setuptools>=77.0.3",
    "toml>=0.10.2",
    "tomli>=2.2.1",
    "tomlkit>=0.13.2",
    "urllib3>=2.3.0",
]

[tool.nonebot]
plugins = ["src.plugins.chat"]
plugin_dirs = ["src/plugins"]

[tool.ruff]

include = ["*.py"]

# 行长度设置
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

# 如果一个变量的名称以下划线开头，即使它未被使用，也不应该被视为错误或警告。
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# 启用的规则
select = [
    "E", # pycodestyle 错误
    "F", # pyflakes
    "B", # flake8-bugbear
]

ignore = ["E711"]

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"


# 使用双引号表示字符串
quote-style = "double"

# 尊重魔法尾随逗号
# 例如：
# items = [
#     "apple",
#     "banana",
#     "cherry",
# ]
skip-magic-trailing-comma = false

# 自动检测合适的换行符
line-ending = "auto"
