[project]
name = "MaiMaiBot"
version = "0.1.0"
description = "MaiMaiBot"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.6",
    "apscheduler>=3.11.0",
    "colorama>=0.4.6",
    "cryptography>=45.0.3",
    "customtkinter>=5.2.2",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.12",
    "jieba>=0.42.1",
    "json-repair>=0.46.0",
    "jsonlines>=4.0.0",
    "loguru>=0.7.3",
    "maim-message>=0.3.0",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "numpy>=2.2.6",
    "openai>=1.82.1",
    "packaging>=25.0",
    "pandas>=2.2.3",
    "peewee>=3.18.1",
    "pillow>=11.2.1",
    "psutil>=7.0.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.5",
    "pymongo>=4.13.0",
    "pypinyin>=0.54.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
    "python-igraph>=0.11.8",
    "quick-algo>=0.1.3",
    "reportportal-client>=5.6.5",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "ruff>=0.11.12",
    "scipy>=1.15.3",
    "setuptools>=80.9.0",
    "strawberry-graphql[fastapi]>=0.270.4",
    "tavily-python>=0.7.3",
    "toml>=0.10.2",
    "tomli>=2.2.1",
    "tomli-w>=1.2.0",
    "tomlkit>=0.13.2",
    "tqdm>=4.67.1",
    "urllib3>=2.4.0",
    "uvicorn>=0.34.3",
    "websockets>=15.0.1",
]

[tool.ruff]

include = ["*.py"]

# 行长度设置
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

# 如果一个变量的名称以下划线开头，即使它未被使用，也不应该被视为错误或警告。
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# 启用的规则
select = [
    "E", # pycodestyle 错误
    "F", # pyflakes
    "B", # flake8-bugbear
]

ignore = ["E711","E501"]

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"


# 使用双引号表示字符串
quote-style = "double"

# 尊重魔法尾随逗号
# 例如：
# items = [
#     "apple",
#     "banana",
#     "cherry",
# ]
skip-magic-trailing-comma = false

# 自动检测合适的换行符
line-ending = "auto"
